--- a/icon_jy.html
+++ b/icon_jy.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <svg class="icon">
-    <use xlink:href="./images/sprite.svg#bag-heart"></use>
+    <use xlink:href="./images_jy/sprite.svg#bag-heart"></use>
   </svg>
 </body>
 </html>
