--- a/icons/icon2.html
+++ b/icons/icon2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <svg class="icon">
-    <use xlink:href="./sprite.svg/#align-end"></use>
+    <use xlink:href="./sprite.svg#align-end"></use>
   </svg><svg class="icon">
 </body>
 </html>
