--- a/LJG/index.html
+++ b/LJG/index.html
@@ -9,27 +9,105 @@
   <title>index</title>
 </head>
 <body>
-  <main class="list-box-container">
-    <table class="wish-list-table cart-table">
-      <colgroup>
-        <col width="5%">
-        <col width="5%">
-        <col width="30%">
-        <col width="8%">
-        <col width="5%">
-        <col width="27%">
-        <col width="20%">
-      </colgroup>
-      <thead>
-        <tr>
-          <th scope="col">전체 개</th>
-          <th scope="col">전체 선택<input type="checkbox" class="check_all"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-    </table>
-  </main>
+  <section class="body-main-page-card main-card-container">
+    <div class="card-container">
+      <div class="main-card">
+        <img src="./imgs/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo1
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./imgs/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo2
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./imgs/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo3
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./imgs/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo4
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./imgs/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo5
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./imgs/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo6
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
