--- a/src/index.html
+++ b/src/index.html
@@ -4,64 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="./index.js"></script>
-  <title>Team_Project</title>
+  <title>index</title>
 </head>
 <body>
-  <header class="header">
-    <div class="icon">icon</div>
-    <p>부엉이 신발장</p>
-    <nav>
-      <ul class="head_menu">
-        <li>menu1</li>
-        <li>menu2</li>
-        <li>menu3</li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="section1">
-      <div class="card_container">
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-      </div>
-    </section>
-    <section class="section2">
-      <div class="card_container">
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-      </div>
-    </section>
-    <section class="section3">
-      <div class="card_container">
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-      </div>
-    </section>
-    <section class="section4">
-      <div class="card_container">
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-        <div class="card">item</div>
-      </div>
-    </section>
-  </main>
-  <footer>
-
-  </footer>
+  
 </body>
 </html>
