jun component update

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,105 @@
   <title>index</title>
 </head>
 <body>
+  <section class="body-main-page-card main-card-container">
+    <div class="card-container">
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo1
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo2
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo3
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo4
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo5
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo6
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
