--- a/src/index.html
+++ b/src/index.html
@@ -4,107 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="./index.js"></script>
   <title>index</title>
 </head>
 <body>
-  <section class="body-main-page-card main-card-container">
-    <div class="card-container">
-      <div class="main-card">
-        <img src="./img/shoes1.png" alt="shoes1">
-        <div class="main-card-info-box">
-          <a href="#" class="text-btn card-text-btn">
-            <div class="main-card-info main-card-info-head">
-              headinfo1
-            </div>
-            <div class="main-card-info main-card-info-body">
-              bodyinfo
-            </div>
-            <div class="main-card-info main-card-info-footer">
-              footinfo
-            </div>
-          </a>
-        </div>
+  <section class="login-popup-background">
+    <div class="login-popup">
+      <div class="ID-box">
+        <p>아이디</p>
+        <input type="text" class="auth-box-ID">
       </div>
-      <div class="main-card">
-        <img src="./img/shoes1.png" alt="shoes1">
-        <div class="main-card-info-box">
-          <a href="#" class="text-btn card-text-btn">
-            <div class="main-card-info main-card-info-head">
-              headinfo2
-            </div>
-            <div class="main-card-info main-card-info-body">
-              bodyinfo
-            </div>
-            <div class="main-card-info main-card-info-footer">
-              footinfo
-            </div>
-          </a>
-        </div>
+      <div class="PW-box">
+        <p>비밀번호</p>
+        <input type="password" class="auth-box-ID">
       </div>
-      <div class="main-card">
-        <img src="./img/shoes1.png" alt="shoes1">
-        <div class="main-card-info-box">
-          <a href="#" class="text-btn card-text-btn">
-            <div class="main-card-info main-card-info-head">
-              headinfo3
-            </div>
-            <div class="main-card-info main-card-info-body">
-              bodyinfo
-            </div>
-            <div class="main-card-info main-card-info-footer">
-              footinfo
-            </div>
-          </a>
-        </div>
+      <div class="text-btn login-btn">로그인</div>
+      <div class="Find-box">
+        <div class="text-btn find-btn"><a href="#">아이디 찾기</a></div>
+        <div class="text-btn find-btn"><a href="#">비밀번호 찾기</a></div>
       </div>
-      <div class="main-card">
-        <img src="./img/shoes1.png" alt="shoes1">
-        <div class="main-card-info-box">
-          <a href="#" class="text-btn card-text-btn">
-            <div class="main-card-info main-card-info-head">
-              headinfo4
-            </div>
-            <div class="main-card-info main-card-info-body">
-              bodyinfo
-            </div>
-            <div class="main-card-info main-card-info-footer">
-              footinfo
-            </div>
-          </a>
-        </div>
+      <div class="auto-login-btn-box">
+        자동로그인
+        <div class="toggle-btn"></div>
       </div>
-      <div class="main-card">
-        <img src="./img/shoes1.png" alt="shoes1">
-        <div class="main-card-info-box">
-          <a href="#" class="text-btn card-text-btn">
-            <div class="main-card-info main-card-info-head">
-              headinfo5
-            </div>
-            <div class="main-card-info main-card-info-body">
-              bodyinfo
-            </div>
-            <div class="main-card-info main-card-info-footer">
-              footinfo
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="main-card">
-        <img src="./img/shoes1.png" alt="shoes1">
-        <div class="main-card-info-box">
-          <a href="#" class="text-btn card-text-btn">
-            <div class="main-card-info main-card-info-head">
-              headinfo6
-            </div>
-            <div class="main-card-info main-card-info-body">
-              bodyinfo
-            </div>
-            <div class="main-card-info main-card-info-footer">
-              footinfo
-            </div>
-          </a>
+      <div class="signin-btn-box">
+        아직 부엉이 가족이 아니신가요?
+        <div class="signin-btn">
         </div>
       </div>
     </div>
