Jun component 꾸미기X 완성

--- a/src/index.html
+++ b/src/index.html
@@ -14,28 +14,23 @@
 <body>
   <section class="login-popup-background">
     <div class="login-popup">
-      <div class="ID-box">
-        <p>아이디</p>
+      <div id="name-box" class="ID-box">
+        <p>이름</p>
         <input type="text" class="auth-box-ID">
       </div>
-      <div class="PW-box">
+      <div id="ID-box" class="ID-box">
+        <p>아이디</p>
+        <input type="password" class="auth-box-ID">
+      </div>
+      <div id="PW-box" class="PW-box">
         <p>비밀번호</p>
         <input type="password" class="auth-box-ID">
       </div>
-      <div class="text-btn login-btn">로그인</div>
-      <div class="Find-box">
-        <div class="text-btn find-btn"><a href="#">아이디 찾기</a></div>
-        <div class="text-btn find-btn"><a href="#">비밀번호 찾기</a></div>
+      <div id="PW-check-box" class="PW-box">
+        <p>비밀번호 확인</p>
+        <input type="password" class="auth-box-ID">
       </div>
-      <div class="auto-login-btn-box">
-        자동로그인
-        <div class="toggle-btn"></div>
-      </div>
-      <div class="signin-btn-box">
-        아직 부엉이 가족이 아니신가요?
-        <div class="signin-btn">
-        </div>
-      </div>
+      <div class="text-btn login-btn"><a href="#">부엉이랑 가족하기</a></div>
     </div>
   </section>
 </body>
