main pull backup

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <script src="./index.js"></script>
   <title>index</title>
 </head>
-<body>
+<body class="main-page">
   <main>
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
