Jun main page jakupjung

--- a/src/index.html
+++ b/src/index.html
@@ -314,7 +314,46 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="footer">
+    <div class="footer-text-btn-group">
+      <div class="text-btn footer-text-btn">
+        CS
+        <div class="footer-text-btn-box footer-text-btn-CS">
+          <div class="footer-text-btn-info">
+            <a href="#">고객지원 센터
+            </a>
+            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="text-btn footer-text-btn">
+        SNS
+        <div class="footer-text-btn-box footer-text-btn-SNS">
+          <div class="footer-text-btn-info">
+            <ul>
+              <li><a href="https://www.instagram.com/"><img src="./img/insta_icon_1x.svg" alt="facebook">
+              </a></li>
+              <li><a href="https://www.facebook.com/"><img src="./img/facebook_icon_1x.svg" alt="facebook">
+              </a></li>
+              <li><a href="https://twitter.com/"><img src="./img/twitter_icon_1x.svg" alt="facebook">
+              </a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="text-btn footer-text-btn">
+        AboutUs
+        <div class="footer-text-btn-box footer-text-btn-AboutUs">
+          <div class="footer-text-btn-info">
+            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
+            </a>
+            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
