category 페이지 작업

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,126 @@
   <title>index</title>
 </head>
 <body>
-  
+  <header>
+    <nav class="navbar">
+        <a href="#" id="logo">
+        <img src="./images/" width="">
+        </a>
+        <ul class="center">
+        <li class="1">부엉이 신발장</li>
+      </ul>
+        <ul id="menu">
+          <li><a href="#">SEARCH</a></li>
+          <li><a href="#">SIGN IN</a></li> 
+          <li><a href="#">LOGIN</a></li> 
+        </ul>
+    </nav>
+  </header>
+  <p class="brand-text">
+    발이 편해야,
+  </p>
+  <p class="brand-text">
+    삶이 편하다
+  </p>
+  <section class="body-main-page-card main-card-container">
+    <div class="card-container">
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo1
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo2
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo3
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo4
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo5
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="main-card">
+        <img src="./img/shoes1.png" alt="shoes1">
+        <div class="main-card-info-box">
+          <a href="#" class="text-btn card-text-btn">
+            <div class="main-card-info main-card-info-head">
+              headinfo6
+            </div>
+            <div class="main-card-info main-card-info-body">
+              bodyinfo
+            </div>
+            <div class="main-card-info main-card-info-footer">
+              footinfo
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
