--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
           </li>
         </ul>
         <ul id="menu">
-          <li><a href="#">SEARCH</a></li>
-          <li><a href="#">SIGN IN</a></li> 
-          <li><a href="#">LOGIN</a></li> 
+          <li><button class="btn search-btn"><img src="./img/search.svg" alt=""></button></li>
+          <li><button class="btn nav-btn">LOGIN</button></li> 
+          <li><button class="btn nav-btn">SIGNIN</button></li> 
         </ul>
     </nav>
   </header>
