category.html 수정

--- a/src/category.html
+++ b/src/category.html
@@ -39,41 +39,36 @@
       </a>
     </nav>
     <ul class="category-box">
-      <li class="category-box-item">
-        <img src="./img/shoes.svg" alt="">
+      <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
         <div class="category-box-text">
           <div class="card-price">100만원</div>
           <div class="card-name">신발이름!</div>
         </div>
       </li>
-      <li class="category-box-item">        <img src="./img/shoes.svg" alt="">
+      <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
         <div class="category-box-text">
           <div class="card-price">100만원</div>
           <div class="card-name">신발이름!</div>
         </div></li>
-      <li class="category-box-item">
-        <img src="./img/shoes.svg" alt="">
+        <li class="category-box-item" style="background-image:url(./img/shoes.svg)">  
         <div class="category-box-text">
           <div class="card-price">100만원</div>
           <div class="card-name">신발이름!</div>
         </div>
       </li>
-      <li class="category-box-item">
-        <img src="./img/shoes.svg" alt="">
+      <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
         <div class="category-box-text">
           <div class="card-price">100만원</div>
           <div class="card-name">신발이름!</div>
         </div>
       </li>
-      <li class="category-box-item">
-        <img src="./img/shoes.svg" alt="">
+      <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
         <div class="category-box-text">
           <div class="card-price">100만원</div>
           <div class="card-name">신발이름!</div>
         </div>
       </li>
-      <li class="category-box-item">
-        <img src="./img/shoes.svg" alt="">
+      <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
         <div class="category-box-text">
           <div class="card-price">100만원</div>
           <div class="card-name">신발이름!</div>
