--- a/src/main-page.html
+++ b/src/main-page.html
@@ -7,38 +7,123 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="./index.js"></script>
   <title>index</title>
 </head>
 <body  class="main-page">
   <header>
     <nav class="nav-bar">
-        <a href="#" id="logo">
-        <img src="./img/OOTD.jpg" width="">
-        </a>
-        <ul class="center">
-          <li class="comp-name">
-            부엉이 신발장
-          </li>
-        </ul>
-        <ul id="menu">
-          <li><a href="#">SEARCH</a></li>
-          <li><a href="#">SIGN IN</a></li> 
-          <li><a href="#">LOGIN</a></li> 
-        </ul>
+        <div class="nav-bar-items">
+          <div class="nav-bar-comp-name"><a href="./index.html" class="btn">부엉이 신발장</a></div>
+          <div class="nav-bar-menu">
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
+            <button class="btn nav-btn" onclick="SigninPopupOpen()"> SIGNIN </button>
+            <button class="btn nav-btn" onclick="LoginPopupOpen()"> LOGIN </button>
+          </div>
+        </div>
     </nav>
   </header>
   <main>
+    <section class="popup-background search-popup-background">
+      <div class="popup search-popup">
+        <div class="btn" onclick="SearchPopupClose()">X</div>
+        <div class="search-box">
+          <input type="text" id="search-input">
+          <img src="./img/search.svg" alt="">
+        </div>
+      </div>
+    </section>
+    <section class="popup-background login-popup-background">
+      <div class="popup login-popup">
+        <div class="popup-close-btn">
+          <div class="btn" onclick="LoginPopupClose()">X</div>
+        </div>
+        <div class="ID-box">
+          <p>아이디</p>
+          <input type="text" class="auth-box-ID">
+        </div>
+        <div id="PW-box">
+          <p>비밀번호</p>
+          <input type="password" class="auth-box-ID">
+        </div>
+        <button class="btn auth-btn">로그인</button>
+        <div class="auto-login-btn-box">
+          자동로그인
+          <div class="auto-login-toggle-btn">
+            <input type="checkbox" id="toggle" hidden> 
+            <label for="toggle" class="toggleSwitch">
+              <span class="toggleButton"></span>
+            </label>
+          </div>
+        </div>
+        <div class="find-box">
+          아이디, 비밀번호를 잃어버리셨나요?<br>
+          <div class="find-btn-box">
+            <div class="find-btn"><a href="#" class="btn">아이디 찾기</a></div>
+            <div class="find-btn"><a href="#" class="btn">비밀번호 찾기</a></div>
+          </div>
+        </div>
+        <div class="signin-btn-box">
+          아직 부엉이 가족이 아닌가요?
+          <button class="btn" onclick="SigninPopupOpen()">부엉이랑 가족하기</button>
+        </div>
+      </div>
+    </section>
+    <section class="popup-background signin-popup-background">
+      <div class="popup signin-popup">
+        <div class="popup-close-btn">
+          <div class="btn" onclick="SigninPopupClose()">X</div>
+        </div>
+        <div id="name-box" class="ID-box">
+          <p>이름</p>
+          <input type="text" class="auth-box-ID">
+        </div>
+        <div id="signin-ID-box" class="ID-box">
+          <p>아이디</p>
+          <input type="password" class="auth-box-ID">
+        </div>
+        <div id="signin-PW-box" class="PW-box">
+          <p>비밀번호</p>
+          <input type="password" class="auth-box-ID">
+        </div>
+        <div id="PW-check-box" class="PW-box">
+          <p>비밀번호 확인</p>
+          <input type="password" class="auth-box-ID">
+        </div>
+        <button class="btn" onclick="SigninPopupOpen()">부엉이랑 가족하기</button>
+      </div>
+    </section>
     <section class="main-page-text-box">
       <p class="main-page-text text-1">발이 편해야</p>
-      <p class="main-page-text text-2">착지도 편하다.</p>
+      <p class="main-page-text text-2">날갯짓도 편하다.</p>
     </section>
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="#">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
             <a href="#" class="text-btn card-text-btn">
+              <div class="main-card-info main-card-info-head">
+                에어포스 1
+              </div>
+              <div class="main-card-info main-card-info-body">
+                사이즈
+              </div>
+              <div class="main-card-info main-card-info-footer">
+                footinfo
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="main-card">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
+          <div class="main-card-info-box">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 headinfo1
               </div>
@@ -52,11 +137,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo2
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -68,11 +155,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo3
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -84,11 +173,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo4
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -100,27 +191,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo5
-              </div>
-              <div class="main-card-info main-card-info-body">
-                bodyinfo
-              </div>
-              <div class="main-card-info main-card-info-footer">
-                footinfo
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
-          <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
-              <div class="main-card-info main-card-info-head">
-                headinfo6
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -136,9 +213,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 headinfo1
               </div>
@@ -152,11 +231,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo2
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -168,11 +249,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo3
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -184,11 +267,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo4
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -200,11 +285,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo5
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -216,11 +303,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo6
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -236,9 +325,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 headinfo1
               </div>
@@ -252,11 +343,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo2
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -268,11 +361,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo3
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -284,11 +379,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo4
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -300,11 +397,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo5
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -316,11 +415,13 @@
           </div>
         </div>
         <div class="main-card">
-          <img src="./img/shoes1.png" alt="shoes1">
+          <a href="./category.html">
+            <img src="./img/shoes1.png" alt="shoes1">
+          </a>
           <div class="main-card-info-box">
-            <a href="#" class="text-btn card-text-btn">
+            <a href="./category.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
-                headinfo6
+                headinfo1
               </div>
               <div class="main-card-info main-card-info-body">
                 bodyinfo
@@ -366,9 +467,7 @@
         AboutUs
         <div class="footer-text-btn-box footer-text-btn-AboutUs">
           <div class="footer-text-btn-info">
-            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
-            </a>
-            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
+            <a href="#">우리는 부엉씨의 가족분들이 잠든 시간에 몰래 선물해드리는 모임입니다..!
             </a>
           </div>
         </div>
