--- a/src/category-page-logout.html
+++ b/src/category-page-logout.html
@@ -149,13 +149,13 @@
         </ul>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="footer-text-btn-group">
         <div class="text-btn footer-text-btn">
           CS
-          <div class="footer-text-btn-box">
+          <div class="footer-text-btn-box footer-text-btn-CS">
             <div class="footer-text-btn-info">
-              <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
+              <a href="#">고객지원 센터
               </a>
               <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
               </a>
@@ -164,26 +164,24 @@
         </div>
         <div class="text-btn footer-text-btn">
           SNS
-          <div class="footer-text-btn-box ">
-            <div class="footer-text-btn-info footer-text-btn-SNS">
+          <div class="footer-text-btn-box footer-text-btn-SNS">
+            <div class="footer-text-btn-info">
               <ul>
-                <li><a href="#"><img src="./img/insta_icon_1x.svg" alt="facebook">
+                <li><a href="https://www.instagram.com/"><img src="./img/insta_icon_1x.svg" alt="facebook">
                 </a></li>
-                <li><a href="#"><img src="./img/facebook_icon_1x.svg" alt="facebook">
+                <li><a href="https://www.facebook.com/"><img src="./img/facebook_icon_1x.svg" alt="facebook">
                 </a></li>
-                <li><a href="#"><img src="./img/twitter_icon_1x.svg" alt="facebook">
+                <li><a href="https://twitter.com/"><img src="./img/twitter_icon_1x.svg" alt="facebook">
                 </a></li>
               </ul>
             </div>
           </div>
         </div>
         <div class="text-btn footer-text-btn">
-          About us
-          <div class="footer-text-btn-box">
+          AboutUs
+          <div class="footer-text-btn-box footer-text-btn-AboutUs">
             <div class="footer-text-btn-info">
-              <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
-              </a>
-              <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus.
+              <a href="#">우리는 부엉씨의 가족분들이 잠든 시간에 몰래 선물해드리는 모임입니다..!
               </a>
             </div>
           </div>
